--- a/index.html
+++ b/index.html
@@ -27,10 +27,8 @@
             </button>
             <button class="header__middle__vsearch" >
                 <img class="header__middle__vsearch__img" src="./images/icons/voice-search-icon.svg" alt="">
-            </button>
-           
+            </button>   
         </section>
-
 
         <section class="header__right">
             <div class="header__right__icon">
@@ -48,9 +46,35 @@
               <div class="header__right__icon">
                 <img class="h-32px" src="./images/channel-pictures/my-channel.png" alt="">
               </div>
-        </section>
-        
+        </section> 
     </header>
+
+    <nav class="nav">
+        <a href="#">
+            <img class="h-24px" src="./images/icons/home.svg" alt="">
+            <span>Home</span>
+          </a>
+          <a href="#">
+            <img class="h-24px" src="./images/icons/explore.svg" alt="">
+            <span>Explore</span>
+          </a>
+          <a href="#">
+            <img class="h-24px" src="./images/icons/subscriptions.svg" alt="">
+            <span>Subscriptions</span>
+          </a>
+          <a href="#">
+            <img class="h-24px" src="./images/icons/originals.svg" alt="">
+            <span>Originals</span>
+          </a>
+          <a href="#">
+            <img class="h-24px" src="./images/icons/youtube-music.svg" alt="">
+            <span>Youtube Music</span>
+          </a>
+          <a href="#">
+            <img class="h-24px" src="./images/icons/library.svg" alt="">
+            <span>Library</span>
+          </a>
+    </nav>
 
     <main class="video-grid">
         <section class="video-preview">
